--- a/ProjetoJs/index.html
+++ b/ProjetoJs/index.html
@@ -95,13 +95,13 @@
       <h1 class="titulo">FAQ</h1>
       <dl class="faq-lista" data-anime="accordion">
         <dt>Quantos anos no mercado?</dt>
-        <dd>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</dd>
+        <dd>És os Guri se encontra no mercado a 3 anos com profissionais capacitados e extremamente competentes, relevantes no mercado de tecnologia capazes de atender variadas area no campo da tecnologia com a qualidade e seguranca que voce buusca.</dd>
         <dt>Os profissionais possuem ensino superior?</dt>
-        <dd>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</dd>
+        <dd>Profissioonais formados em diferentes areas da tecnologia com cursos complementares para a area de foco de cada profissional, voce pode obter mais informacoes sobre esses competentes profissionais acessando suas paginas profissionais no LinkedIn(link).</dd>
         <dt>Aceitam quais tipos de pagamento?</dt>
-        <dd>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</dd>
+        <dd>Diferentes formas de pagamentos acordadas em contrato dando a liberdade dos contratantes a negociacao com variadas formas de pagamento, inclusive cryptomoedas(BTC).</dd>
         <dt>Como entrar em contato?</dt>
-        <dd>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</dd>
+        <dd>Na área de contatos tem todos as nossas informações.</dd>
       </dl>
     </section>
 
